--- a/resources/infyom/infyom-generator-templates/vuejs/js/package.json
+++ b/resources/infyom/infyom-generator-templates/vuejs/js/package.json
@@ -3,6 +3,7 @@
   "devDependencies": {
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
+    "babel-plugin-espower": "^2.2.0",
     "babel-plugin-transform-runtime": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-runtime": "^6.9.2",
