--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
   "private": true,
-  "devDependencies": {
-    "babel-core": "^6.7.6",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-espower": "^2.2.0",
-    "babel-plugin-transform-runtime": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-runtime": "^6.9.2",
-    "css-loader": "^0.23.1",
-    "eslint": "^2.8.0",
-    "eslint-loader": "^1.3.0",
-    "gulp": "^3.8.8",
-    "vue": "^1.0.24",
-    "vue-hot-reload-api": "^1.3.2",
-    "vue-html-loader": "^1.2.2",
-    "vue-loader": "^8.2.3",
-    "vue-select": "^0.1.2",
-    "vue-style-loader": "^1.0.0",
-    "vue-validator": "^2.1.3",
-    "vueify": "^8.5.1",
-    "vuetable": "^1.1.1",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1"
+  "scripts": {
+    "prod": "gulp --production",
+    "dev": "gulp watch"
   },
-  "dependencies": {
-    "laravel-elixir": "^3.0.0",
-    "bootstrap-sass": "^3.0.0"
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.10.4",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-2": "^6.5.0",
+    "babel-runtime": "^6.9.2",
+    "bootstrap-sass": "^3.3.0",
+    "gulp": "^3.9.1",
+    "laravel-elixir": "^5.0.0",
+    "laravel-elixir-vueify": "^1.0.3",
+    "uglify-js": "^2.6.4",
+    "vue": "^1.0.25",
+    "vue-select": "^1.2.1",
+    "vue-strap": "^1.0.11",
+    "vue-validator": "^2.1.3",
+    "vueify": "^8.5.4",
+    "vuetable": "^1.1.2"
   }
 }
