--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "infyomlabs/laravel-generator": "dev-master",
         "laravelcollective/html": "5.2.*",
         "barryvdh/laravel-debugbar": "^2.2",
-        "znck/belongs-to-through": "^2.2"        
+        "znck/belongs-to-through": "^2.2",
+        "mathiasgrimm/laravel-dot-env-gen": "dev-master"        
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
