--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravelcollective/html": "5.2.*",
         "barryvdh/laravel-debugbar": "^2.2",
         "znck/belongs-to-through": "^2.2",
-        "mathiasgrimm/laravel-dot-env-gen": "dev-master"        
+        "mathiasgrimm/laravel-dot-env-gen": "dev-master",
+        "nicolaslopezj/searchable": "1.*"        
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
