--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "barryvdh/laravel-debugbar": "^2.2",
         "znck/belongs-to-through": "^2.2",
         "mathiasgrimm/laravel-dot-env-gen": "dev-master",
-        "nicolaslopezj/searchable": "1.*"        
+        "nicolaslopezj/searchable": "1.*",
+        "sofa/eloquence": "~5.2"        
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
