--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "infyomlabs/adminlte-templates": "dev-master",
         "barryvdh/laravel-ide-helper": "^2.2",
         "mpociot/laravel-apidoc-generator": "^1.5",
-        "arcanedev/log-viewer": "~3.0"
+        "arcanedev/log-viewer": "~3.0",
+        "laracasts/generators": "^1.1"
     },
     "autoload": {
         "classmap": [
