--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-preset-stage-2": "^6.5.0",
     "babel-runtime": "^6.9.2",
     "bootstrap-sass": "^3.3.0",
+    "decamelize": "^1.2.0",
     "gulp": "^3.9.1",
     "laravel-elixir": "^5.0.0",
     "laravel-elixir-vueify": "^1.0.3",
