--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp": "^3.9.1",
     "laravel-elixir": "^5.0.0",
     "laravel-elixir-vueify": "^1.0.3",
+    "select2-browserify": "^3.4.5",
     "uglify-js": "^2.6.4",
     "vue": "^1.0.25",
     "vue-select": "^1.3.3",
