--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-sass": "^3.3.0",
     "decamelize": "^1.2.0",
     "gulp": "^3.9.1",
+    "jquery": "^3.1.0",
     "laravel-elixir": "^5.0.0",
     "laravel-elixir-vueify": "^1.0.3",
     "select2-browserify": "^3.4.5",
