--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "mathiasgrimm/laravel-dot-env-gen": "dev-master",
         "nicolaslopezj/searchable": "1.*",
         "sofa/eloquence": "~5.2",
-        "davejamesmiller/laravel-breadcrumbs": "^3.0"        
+        "davejamesmiller/laravel-breadcrumbs": "^3.0",
+        "geoip/geoip": "~1.14"        
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
