--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "nicolaslopezj/searchable": "1.*",
         "sofa/eloquence": "~5.2",
         "davejamesmiller/laravel-breadcrumbs": "^3.0",
-        "geoip/geoip": "~1.14"        
+        "geoip/geoip": "~1.14",
+        "garygreen/pretty-routes": "^0.0.1"        
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
