--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,6 @@
         "barryvdh/laravel-debugbar": "^2.2",
         "znck/belongs-to-through": "^2.2",
         "mathiasgrimm/laravel-dot-env-gen": "dev-master",
-        "nicolaslopezj/searchable": "1.*",
-        "sofa/eloquence": "~5.2",
         "davejamesmiller/laravel-breadcrumbs": "^3.0",
         "geoip/geoip": "~1.14",
         "garygreen/pretty-routes": "^0.0.1"        
@@ -37,6 +35,7 @@
         "classmap": [
             "database"
         ],
+        "files": ["app/Http/helpers.php"],
         "psr-4": {
             "App\\": "app/"
         }
