--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "davejamesmiller/laravel-breadcrumbs": "^3.0",
         "geoip/geoip": "~1.14",
         "garygreen/pretty-routes": "^0.0.1",
-        "bugsnag/bugsnag-laravel": "^2.0"        
+        "bugsnag/bugsnag-laravel": "^2.0",
+        "jenssegers/rollbar": "^1.5"        
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
