--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "select2-browserify": "^3.4.5",
     "uglify-js": "^2.6.4",
     "vue": "^1.0.25",
+    "vue-html-loader": "^1.2.3",
     "vue-select": "^1.3.3",
-    "vue-strap": "^1.0.11",
+    "vue-strap": "^1.1.28",
     "vue-validator": "^2.1.3",
     "vueify": "^8.5.4",
     "vuetable": "^1.1.2"
