--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "geoip/geoip": "~1.14",
         "garygreen/pretty-routes": "^0.0.1",
         "bugsnag/bugsnag-laravel": "^2.0",
-        "jenssegers/rollbar": "^1.5"        
+        "jenssegers/rollbar": "^1.5",
+        "felixkiss/uniquewith-validator": "2.*"        
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
