--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "laravelcollective/html": "5.2.*",
         "barryvdh/laravel-debugbar": "^2.2",
         "znck/belongs-to-through": "^2.2",
+        "mathiasgrimm/laravel-dot-env-gen": "dev-master",
         "davejamesmiller/laravel-breadcrumbs": "^3.0",
+        "geoip/geoip": "~1.14",
         "garygreen/pretty-routes": "^0.0.1",
         "bugsnag/bugsnag-laravel": "^2.0",
         "jenssegers/rollbar": "^1.5",
